--- a/client/home.jade
+++ b/client/home.jade
@@ -16,6 +16,11 @@ template(name='home')
                 .ui.icon.grey.header 
                     i.grey.shapes.icon
                     |minutes
+        a.ui.card(href="/work_orders")
+            .content 
+                .ui.icon.grey.header 
+                    i.grey.shapes.icon
+                    |work orders
         a.ui.card(href="/tests")
             .content 
                 .ui.icon.grey.header
