--- a/parts/profile/member_sections.jade
+++ b/parts/profile/member_sections.jade
@@ -112,7 +112,10 @@ template(name='handling_sessions')
                 +remove_button
                 
         
-            
+template(name='user_cart')
+    +cart
+
+
         
 template(name='rental_small_interest')        
     .ui.stackable.grid
