--- a/client/styles.css
+++ b/client/styles.css
@@ -7,7 +7,7 @@ body {
     /*line-height: 200% !important;*/
     /* background: rgba(0,0,0,.9) !important; */
     /* filter: invert(.9) !important; */
-    background: rgba(200, 200, 200, .3) !important
+    background: rgba(200, 200, 200, .8) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -19,6 +19,8 @@ body {
 ::-webkit-scrollbar {
   width: 10px;
 }
+
+
 
 /* Track */
 ::-webkit-scrollbar-track {
@@ -110,6 +112,10 @@ body {
 
 .rounded {
     /* border-radius: 10px !important; */
+}
+
+.spacer{
+    height:10px !important;
 }
 
 
