--- a/client/home.jade
+++ b/client/home.jade
@@ -14,12 +14,12 @@ template(name='home')
         a.ui.card(href="/minutes")
             .content 
                 .ui.icon.grey.header 
-                    i.grey.shapes.icon
+                    i.grey.clock.icon
                     |minutes
         a.ui.card(href="/work_orders")
             .content 
                 .ui.icon.grey.header 
-                    i.grey.shapes.icon
+                    i.grey.wrench.icon
                     |work orders
         a.ui.card(href="/tests")
             .content 
@@ -29,7 +29,7 @@ template(name='home')
         a.ui.card(href="/gallery")
             .content 
                 .ui.icon.grey.header
-                    i.grey.edit.icon
+                    i.grey.photo.icon
                     | gallery
         a.ui.card(href="/rentals")
             .content 
