--- a/client/users.jade
+++ b/client/users.jade
@@ -8,7 +8,7 @@ template(name='residents')
             +resident
             
 template(name='members') 
-    .ui.left.icon.fluid.input
+    .ui.left.icon.fluid.massive.input
         i.search.icon
         input.member_search(type='text' placeholder='lookup member' autofocus='autofocus')
     .ui.hidden.divider
