--- a/parts/admin/admin.jade
+++ b/parts/admin/admin.jade
@@ -20,10 +20,11 @@ template(name='admin')
             .column
                 .ui.header 
                     |payments
-                each payments
-                    .item
-                        .ui.header #{sender_username} to #{recipient_username} #{when} for #{amount} credit
-                        +author_info
+                .largescroll
+                    each payments
+                        .item
+                            .ui.header #{sender_username} to #{recipient_username} #{when} for #{amount} credit
+                            +author_info
                         
             .column
                 +my_latest_activity
