--- a/parts/social/groups.jade
+++ b/parts/social/groups.jade
@@ -21,7 +21,8 @@ template(name='groups')
                                 .ui.mini.header group estimated time
                                 .ui.mini.header group monthly completion rate
                         .column
-                            +latest_group_updates
+                            //- +latest_group_updates
+                            .ui.header latest group updates
                         .column
                             .ui.header 
                                 +i name='comments'
