--- a/client/styles.css
+++ b/client/styles.css
@@ -20,6 +20,15 @@ body {
   width: 10px;
 }
 
+.largescroll{
+	overflow-y:scroll;
+	overflow-x:hidden;
+	max-height:700px;
+	/*max-height:85vh;*/
+	padding-top: 1em;
+	/*padding-left: 1em;*/
+}
+
 
 
 /* Track */
@@ -45,7 +54,7 @@ body {
 .teal.button {
     background-color: #008080 !important;
 }
-.blue.button {
+.blue.button , .blue.segment{
     background-color: #0E6EB8 !important;
 }
 .violet.button {
@@ -425,7 +434,7 @@ input.username_search{
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
 }
 
-input.member_search{
+/* input.member_search{
     -webkit-border-radius: 25px !important; */
     border-radius: 20px !important;
     font-size: 150% !important;
@@ -436,7 +445,7 @@ input.member_search{
     border-width: 1px !important;
     border-color: blue !important;
     box-shadow: 0 2px 5px 2px rgba(50, 50, 100, 0.1) !important;
-}
+} */
 
 /* input:focus, textarea:focus {
     background: rgba(250, 250, 250, 0.8) !important;
