--- a/parts/admin/global_stats.jade
+++ b/parts/admin/global_stats.jade
@@ -1,58 +1,62 @@
 template(name='global_stats')
-    if is_dev
-        i.refresh.link.icon.refresh_global_stats
-    with global_stats
-        .ui.big.list    
-            .item #{home_views} 
-                small homepage views
-            .item #{total_owners_count} 
-                small total owners count
-            .item #{total_handlers_count} 
-                small total handlers count
-            .item #{current_active_handlers} 
-                small current active handlers
-            .item #{current_average_hourly_wage} 
-                small current average hourly wage
-            .item #{todays_average_hourly_wage} 
-                small todays average hourly wage
-            .item #{yesterdays_average_hourly_wage} 
-                small yesterdays average hourly wage
-            .item #{this_weeks_average_hourly_wage} 
-                small this weeks average hourly wage
-            .item #{last_weeks_average_hourly_wage} 
-                small last weeks average hourly wage
-            .item #{total_count} 
-                small total docs
-            .item #{total_members_count}
-                small members
-            .item #{service_count}
-                small services
-            .item 
-                small total reservation revenue
-                | #{total_reservation_revenue}c
-            .item 
-                small total owner revenue
-                | #{total_owner_revenue}c
-            .item 
-                small total handler revenue
-                | #{total_handler_revenue}c
-            .item 
-                small total tax revenue
-                | #{total_tax_revenue}c
-            .item #{total_payment_amount}c
-                small in payments
-            .item #{product_count} 
-                small products
-            //- .item #{withdrawel_count}
-            //-     small withdrawels
-            .item #{payment_count}
-                small payments
-            .item #{reservation_count}
-                small reservations
-            .item #{bid_count}
-                small bids
-            .item #{rental_count}
-                small  rentals
+    .ui.grid 
+        .eight.wide.column
+            if is_dev
+                i.refresh.link.icon.refresh_global_stats
+            with global_stats
+                .ui.big.list    
+                    .item #{home_views} 
+                        small homepage views
+                    .item #{total_owners_count} 
+                        small total owners count
+                    .item #{total_handlers_count} 
+                        small total handlers count
+                    .item #{current_active_handlers} 
+                        small current active handlers
+                    .item #{current_average_hourly_wage} 
+                        small current average hourly wage
+                    .item #{todays_average_hourly_wage} 
+                        small todays average hourly wage
+                    .item #{yesterdays_average_hourly_wage} 
+                        small yesterdays average hourly wage
+                    .item #{this_weeks_average_hourly_wage} 
+                        small this weeks average hourly wage
+                    .item #{last_weeks_average_hourly_wage} 
+                        small last weeks average hourly wage
+                    .item #{total_count} 
+                        small total docs
+                    .item #{total_members_count}
+                        small members
+                    .item #{service_count}
+                        small services
+        .eight.wide.column
+            .ui.big.list
+                .item 
+                    small total reservation revenue
+                    | #{total_reservation_revenue}c
+                .item 
+                    small total owner revenue
+                    | #{total_owner_revenue}c
+                .item 
+                    small total handler revenue
+                    | #{total_handler_revenue}c
+                .item 
+                    small total tax revenue
+                    | #{total_tax_revenue}c
+                .item #{total_payment_amount}c
+                    small in payments
+                .item #{product_count} 
+                    small products
+                //- .item #{withdrawel_count}
+                //-     small withdrawels
+                .item #{payment_count}
+                    small payments
+                .item #{reservation_count}
+                    small reservations
+                .item #{bid_count}
+                    small bids
+                .item #{rental_count}
+                    small  rentals
 
 
 //- {
