--- a/parts/profile/member_profile.jade
+++ b/parts/profile/member_profile.jade
@@ -58,68 +58,6 @@ template(name='member_profile_layout')
                     //- else
                     //-     .ui.button.direct_message(title='new message')
                     //-         +i name='envelope'
-                    .ui.fluid.vertical.pointing.secondary.menu(class="{{currentUser.nav_color}}")
-                        a.item(href="/member/#{username}/dashboard" class="{{isActiveRoute regex='user_dashboard'}}")
-                            i.grey.dashboard.icon
-                            |dashboard
-                        a.item(href="/member/#{username}/credit" class="{{isActiveRoute regex='user_credit'}}")
-                            i.coins.grey.icon
-                            |credit
-                        a.item(href="/member/#{username}/questions" class="{{isActiveRoute regex=user_offers}}")
-                            i.question.mark.icon
-                            |questions
-                        //- a.item(href="/member/#{username}/passages" class="{{isActiveRoute regex=user_passages}}")
-                        //-     i.list.icon
-                        //-     |passages
-                        a.item(href="/member/#{username}/shop" class="{{isActiveRoute regex='user_shop'}}")
-                            i.shopping.cart.grey.icon
-                            |shop
-                        a.item(href="/member/#{username}/requests" class="{{isActiveRoute regex='user_requests'}}")
-                            i.hand.holding.usd.grey.icon
-                            | requests
-                        a.item(href="/member/#{username}/social" class="{{isActiveRoute regex='user_social'}}")
-                            i.comments.grey.icon
-                            |social
-                        a.item(href="/member/#{username}/brain" class="{{isActiveRoute regex='user_brain'}}")
-                            i.grey.brain.icon
-                            |brain
-                        a.item(href="/member/#{username}/karma" class="{{isActiveRoute regex='user_karma'}}")
-                            i.grey.yin.yang.icon
-                            |karma
-                        a.item(href="/member/#{username}/right" class="{{isActiveRoute regex='user_right'}}")
-                            i.grey.checkmark.icon
-                            |right
-                        a.item(href="/member/#{username}/wrong" class="{{isActiveRoute regex='user_wrong'}}")
-                            i.grey.remove.icon
-                            |wrong
-                        a.item(href="/member/#{username}/finance" class="{{isActiveRoute regex='user_finance'}}")
-                            i.grey.coins.icon
-                            |finance
-                        a.item(href="/member/#{username}/cart" class="{{isActiveRoute regex='user_cart'}}")
-                            i.grey.shopping.cart.icon
-                            |cart
-                        a.item(href="/member/#{username}/groups" class="{{isActiveRoute regex='user_groups'}}")
-                            i.grey.users.icon
-                            |groups
-                        a.item(href="/member/#{username}/tutoring" class="{{isActiveRoute regex='user_tutoring'}}")
-                            i.grey.chalkboard.icon
-                            |tutoring
-                        a.item(href="/member/#{username}/events" class="{{isActiveRoute regex='user_events'}}")
-                            i.grey.calendar.icon
-                            |events
-                        a.item(href="/member/#{username}/fiq" class="{{isActiveRoute regex=user_fiq}}")
-                            i.grey.line.chart.icon
-                            |fiq
-                        a.item(href="/member/#{username}/awards" class="{{isActiveRoute regex=user_awards}}")
-                            i.grey.award.icon
-                            |awards
-                        a.item(href="/member/#{username}/friends" class="{{isActiveRoute regex='user_friends'}}")
-                            i.grey.users.icon
-                            |friends
-                        a.item(href="/member/#{username}/messages" class="{{isActiveRoute regex='user_messages'}}")
-                            i.grey.envelope.icon
-                            |messages
-                    
                     if is_current_user
                         a.ui.button.logout(href="#" title='logout')
                             //- i.sign.out.alternate.icon
@@ -138,49 +76,93 @@ template(name='member_profile_layout')
                                 .ui.basic.label #{this}
                 .twelve.wide.column
                     a.ui.large.compact.button(href="/member/#{username}/dashboard" class="{{isActiveRoute 'member_dashboard'}}")
-                        +ismall name='dashboard' classes='ui inline image'
+                        i.dashboard.icon
                         |dashboard
                     a.ui.large.compact.button(href="/member/#{username}/info" class="{{isActiveRoute 'member_info'}}")
-                        +ismall name='info' classes='ui inline image'
+                        i.info.icon
                         |info
                     a.ui.large.compact.button(href="/member/#{username}/rentals" class="{{isActiveRoute 'member_rentals'}}")
-                        +ismall name='clock' classes='ui inline image'
+                        i.clock.icon
                         |rentals
                     a.ui.large.compact.button(href="/member/#{username}/handling" class="{{isActiveRoute 'member_handling'}}")
-                        +ismall name='hand-box' classes='ui inline image'
+                        i.hand.holding.icon
                         |handling
                     a.ui.large.compact.button(href="/member/#{username}/reservations" class="{{isActiveRoute 'member_reservations'}}")
-                        +ismall name='invoice' classes='ui inline image'
+                        i.clock.icon
                         |reservations
-                    a.ui.large.compact.button(href="/member/#{username}/finance" class="{{isActiveRoute 'member_finance'}}")
-                        +ismall name='money' classes='ui inline image'
-                        |finance
-                    //- .ui.icon.compact.button.toggle_view_more
-                    //-     i.large.dropdown.icon
-                    //-     a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
-                    //-         +ismall name='star' classes='ui inline image'
-                    //-         |bookmarks
-                        //- a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
-                        //-     +ismall name='phone' classes='ui inline image'
-                        //-     |contact
-                        //- a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
-                        //-     +ismall name='scales' classes='ui inline image'
-                        //-     |comparison
-                        //- a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
-                        //-     +ismall name='sell' classes='ui inline image'
-                        //-     |offers
-                        //- a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
-                        //-     +ismall name='tags' classes='ui inline image'
-                        //-     |tags
-                        //- a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
-                        //-     +ismall name='new-message' classes='ui inline image'
-                        //-     |mail
-                        //- a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
-                        //-     +ismall name='line-chart' classes='ui inline image'
-                        //-     |stats
-                        //- a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
-                        //-     +ismall name='appointment-reminders' classes='ui inline image'
-                        //-     |notifications
+                    a.ui.compact.button(href="/member/#{username}/bookmarks" class="{{isActiveRoute 'member_bookmarks'}}")
+                        i.bookmark.icon
+                        |bookmarks
+                    a.ui.compact.button(href="/member/#{username}/contact" class="{{isActiveRoute 'member_contact'}}")
+                        i.phone.icon
+                        |contact
+                    a.ui.compact.button(href="/member/#{username}/comparison" class="{{isActiveRoute 'member_comparison'}}")
+                        i.transaction.icon
+                        |comparison
+                    a.ui.compact.button(href="/member/#{username}/offers" class="{{isActiveRoute 'member_offers'}}")
+                        i.hand.holding.usd.icon
+                        |offers
+                    a.ui.compact.button(href="/member/#{username}/tags" class="{{isActiveRoute 'member_tags'}}")
+                        i.tags.icon
+                        |tags
+                    a.ui.compact.button(href="/member/#{username}/messages" class="{{isActiveRoute 'member_messages'}}")
+                        i.envelope.icon
+                        |mail
+                    a.ui.compact.button(href="/member/#{username}/stats" class="{{isActiveRoute 'member_stats'}}")
+                        i.line.chart.icon
+                        |stats
+                    a.ui.compact.button(href="/member/#{username}/notifications" class="{{isActiveRoute 'member_notifications'}}")
+                        i.bell.icon
+                        |alerts
+                    a.ui.compact.button(href="/member/#{username}/credit" class="{{isActiveRoute regex='user_credit'}}")
+                        i.coins.grey.icon
+                        |credit
+                    a.ui.compact.button(href="/member/#{username}/questions" class="{{isActiveRoute regex=user_offers}}")
+                        i.question.mark.icon
+                        |questions
+                    //- a.ui.compact.button(href="/member/#{username}/passages" class="{{isActiveRoute regex=user_passages}}")
+                    //-     i.list.icon
+                    //-     |passages
+                    a.ui.compact.button(href="/member/#{username}/shop" class="{{isActiveRoute regex='user_shop'}}")
+                        i.shopping.cart.grey.icon
+                        |shop
+                    a.ui.compact.button(href="/member/#{username}/requests" class="{{isActiveRoute regex='user_requests'}}")
+                        i.hand.holding.usd.grey.icon
+                        | requests
+                    a.ui.compact.button(href="/member/#{username}/social" class="{{isActiveRoute regex='user_social'}}")
+                        i.comments.grey.icon
+                        |social
+                    a.ui.compact.button(href="/member/#{username}/brain" class="{{isActiveRoute regex='user_brain'}}")
+                        i.grey.brain.icon
+                        |brain
+                    a.ui.compact.button(href="/member/#{username}/karma" class="{{isActiveRoute regex='user_karma'}}")
+                        i.grey.yin.yang.icon
+                        |karma
+                    a.ui.compact.button(href="/member/#{username}/right" class="{{isActiveRoute regex='user_right'}}")
+                        i.grey.checkmark.icon
+                        |right
+                    a.ui.compact.button(href="/member/#{username}/wrong" class="{{isActiveRoute regex='user_wrong'}}")
+                        i.grey.remove.icon
+                        |wrong
+                    a.ui.compact.button(href="/member/#{username}/cart" class="{{isActiveRoute regex='user_cart'}}")
+                        i.grey.shopping.cart.icon
+                        |cart
+                    a.ui.compact.button(href="/member/#{username}/groups" class="{{isActiveRoute regex='user_groups'}}")
+                        i.grey.users.icon
+                        |groups
+                    a.ui.compact.button(href="/member/#{username}/tutoring" class="{{isActiveRoute regex='user_tutoring'}}")
+                        i.grey.chalkboard.icon
+                        |tutoring
+                    a.ui.compact.button(href="/member/#{username}/events" class="{{isActiveRoute regex='user_events'}}")
+                        i.grey.calendar.icon
+                        |events
+                    //- a.ui.compact.button(href="/member/#{username}/awards" class="{{isActiveRoute regex=user_awards}}")
+                    //-     i.grey.award.icon
+                    //-     |awards
+                    a.ui.compact.button(href="/member/#{username}/friends" class="{{isActiveRoute regex='user_friends'}}")
+                        i.grey.users.icon
+                        |friends
+        
                     div.global_container
                         +yield
     +footer 
