--- a/parts/social/events.jade
+++ b/parts/social/events.jade
@@ -1,3 +1,8 @@
+template(name='my_events')
+    .ui.header events
+    with my_events
+        .ui.header #{title} #{when}
+
 template(name='event_edit')
     with current_doc
         .ui.stackable.padded.grid
